--- a/index.html
+++ b/index.html
@@ -3,30 +3,28 @@ layout: default
 title: Sirius by Comcast
 ---
 
-<section id="main_content">
-<h1>
-<a name="sirius" class="anchor" href="#sirius"><span class="octicon octicon-link"></span></a>Sirius</h1>
+<section>
+<h1>Sirius</h1>
 
-<p><img src="https://travis-ci.org/Comcast/sirius.svg?branch=master" alt="travis-build"></p>
+<img src="https://travis-ci.org/Comcast/sirius.svg?branch=master" alt="travis-build">
 
 <p>Sirius is an open source distributed system library from Comcast
 that provides your application with convenient, low-latency access
-to important <em>reference data</em>: small, read-only datasets with
+to important reference data: small, read-only datasets with
 relatively small update rates. As RAM sizes in servers continue their
 upward climb, more and more of these datasets will fit in
 memory. Enter Sirius.</p>
 
-<h4>
-<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h4>
+<h4>Features</h4>
 
 <ul>
-<li><strong>Simple, transparent library interface:</strong> Arrange your data in
+<li>Simple, transparent library interface: Arrange your data in
 the native data structures of your choice, and let Sirius feed the
 updates to your application code.</li>
-<li><strong>Eventually consistent replication:</strong> Sirius handles
+<li>Eventually consistent replication: Sirius handles
 replicating updates&mdash;even across wide-area networks&mdash;in a
 consistent order across every member of an application cluster.</li>
-<li><strong>Persistence and automated recovery:</strong> Sirius stores and
+<li>Persistence and automated recovery: Sirius stores and
 maintains local update logs and uses them to rebuild your in-memory
 state after an application restart.</li>
 </ul>
@@ -41,7 +39,7 @@ heavy lifting for you.
 
 <hr/>
 
-<a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h4>
+<h4>Links</h4>
 
 <ul>
 <li><a href="https://github.com/Comcast/sirius/wiki">Sirius Wiki</a></li>
