Updating with current content and new markup

--- a/index.html
+++ b/index.html
@@ -4,51 +4,87 @@ title: Sirius by Comcast
 ---
 
 <section>
-<h1>Sirius</h1>
 
-<img src="https://travis-ci.org/Comcast/sirius.svg?branch=master" alt="travis-build">
+  <h1>Sirius</h1>
 
-<p>Sirius is an open source distributed system library from Comcast
-that provides your application with convenient, low-latency access
-to important reference data: small, read-only datasets with
-relatively small update rates. As RAM sizes in servers continue their
-upward climb, more and more of these datasets will fit in
-memory. Enter Sirius.</p>
+  <p>Sirius is an open source distributed system library from Comcast
+  that provides your application with convenient, low-latency access
+  to important reference data: small, read-only datasets with
+  relatively small update rates. As RAM sizes in servers continue their
+  upward climb, more and more of these datasets will fit in
+  memory. Enter Sirius.</p>
 
-<h4>Features</h4>
+  <a href="https://github.com/Comcast/sirius/zipball/master">Download Sirius</a>
+  <a href="overview.html">Learn More</a>
 
-<ul>
-<li>Simple, transparent library interface: Arrange your data in
-the native data structures of your choice, and let Sirius feed the
-updates to your application code.</li>
-<li>Eventually consistent replication: Sirius handles
-replicating updates&mdash;even across wide-area networks&mdash;in a
-consistent order across every member of an application cluster.</li>
-<li>Persistence and automated recovery: Sirius stores and
-maintains local update logs and uses them to rebuild your in-memory
-state after an application restart.</li>
-</ul>
+</section>
 
-<p>
-In short, Sirius gives you access to your reference data with
-arbitrary, native data structures while handling the distributed system
-heavy lifting for you.
-</p>
+<section>
 
-<p><a href="overview.html">Learn more...</a></p>
+  <ul>
+    <li>
+      <ul>
+        <li>
+          <h1>Simple, transparent library interface</h1>
+        </li>
+        <li>
+          <p>Arrange your data in the native data structures of your choice, and let Sirius feed the updates to your application code.</p>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <ul>
+        <li>
+          <h1>Eventually consistent replication</h1>
+        </li>
+        <li>
+          <p>Sirius handles replicating updates&mdash;even across wide-area networks&mdash;in a consistent order across every member of an application cluster.</p>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <ul>
+        <li>
+          <h1>Persistence and automated recovery</h1>
+        </li>
+        <li>
+          <p>Sirius stores and maintains local update logs and uses them to rebuild your in-memory state after an application restart.</p>
+        </li>
+      </ul>
+    </li>
+  </ul>
 
-<hr/>
 
-<h4>Links</h4>
+  <hr/>
 
-<ul>
-<li><a href="https://github.com/Comcast/sirius/wiki">Sirius Wiki</a></li>
-<li><a href="https://github.com/Comcast/sirius/wiki/Getting+started+with+Sirius">Getting started with Sirius</a></li>
-<li><a href="https://github.com/Comcast/sirius/wiki/Configuring+Sirius">Configuring Sirius</a></li>
-<li><a href="https://github.com/Comcast/sirius/wiki/How+to+deploy+Sirius">How to deploy Sirius</a></li>
-<li><a href="https://github.com/Comcast/sirius/blob/master/CONTRIBUTING.md">Contributing Guidelines</a></li>
-<li><a href="https://github.com/Comcast/sirius/blob/master/LICENSE">License</a></li>
-</ul>
+  <p>In short, Sirius gives you access to your reference data with
+  arbitrary, native data structures while handling the distributed system
+  heavy lifting for you.</p>
+
+
+  <h2>Next Steps</h2>
+
+  <ul>
+    <li>
+      <a href="https://github.com/Comcast/sirius/wiki">Sirius Wiki</a>
+    </li>
+    <li>
+      <a href="https://github.com/Comcast/sirius/wiki/Getting+started+with+Sirius">Getting started with Sirius</a>
+    </li>
+    <li>
+      <a href="https://github.com/Comcast/sirius/wiki/Configuring+Sirius">Configuring Sirius</a>
+    </li>
+    <li>
+      <a href="https://github.com/Comcast/sirius/wiki/How+to+deploy+Sirius">How to deploy Sirius</a>
+    </li>
+    <li>
+      <a href="https://github.com/Comcast/sirius/blob/master/CONTRIBUTING.md">Contributing Guidelines</a>
+    </li>
+    <li>
+      <a href="https://github.com/Comcast/sirius/blob/master/LICENSE">License</a>
+    </li>
+  </ul>
+
 </section>
 
     
