--- a/index.html
+++ b/index.html
@@ -3,52 +3,56 @@ layout: default
 title: Sirius by Comcast
 ---
 
-<section>
+  <section class="module">
 
-  <h1>Sirius</h1>
+    <h1 class="headline-large white centered">Sirius</h1>
 
-  <p>Sirius is an open source distributed system library from Comcast
-  that provides your application with convenient, low-latency access
-  to important reference data: small, read-only datasets with
-  relatively small update rates. As RAM sizes in servers continue their
-  upward climb, more and more of these datasets will fit in
-  memory. Enter Sirius.</p>
+    <p class="body-copy white centered">Sirius is an open source distributed system library from Comcast
+    that provides your application with convenient, low-latency access
+    to important reference data: small, read-only datasets with
+    relatively small update rates. As RAM sizes in servers continue their
+    upward climb, more and more of these datasets will fit in
+    memory. Enter Sirius.</p>
 
-  <a href="https://github.com/Comcast/sirius/zipball/master">Download Sirius</a>
-  <a href="overview.html">Learn More</a>
+    <div class="centered button-wrapper">
+      <a class="white button download" href="https://github.com/Comcast/sirius/zipball/master">Download Sirius</a>
+      <a class="white button go" href="overview.html">Learn More</a>
+    </div>
 
-</section>
+  </section>
 
-<section>
+</div><!-- closing div from header.html for background-->
 
-  <ul>
+<section class="module featured-content global-padding">
+
+  <ul class="tiles">
     <li>
-      <ul>
+      <ul class="tile one">
         <li>
-          <h1>Simple, transparent library interface</h1>
+          <h1 class="headline-small">Simple, transparent library interface</h1>
         </li>
         <li>
-          <p>Arrange your data in the native data structures of your choice, and let Sirius feed the updates to your application code.</p>
+          <p class="body-copy">Arrange your data in the native data structures of your choice, and let Sirius feed the updates to your application code.</p>
         </li>
       </ul>
     </li>
     <li>
-      <ul>
+      <ul class="tile two">
         <li>
-          <h1>Eventually consistent replication</h1>
+          <h1 class="headline-small">Eventually consistent replication</h1>
         </li>
         <li>
-          <p>Sirius handles replicating updates&mdash;even across wide-area networks&mdash;in a consistent order across every member of an application cluster.</p>
+          <p class="body-copy">Sirius handles replicating updates&mdash;even across wide-area networks&mdash;in a consistent order across every member of an application cluster.</p>
         </li>
       </ul>
     </li>
     <li>
-      <ul>
+      <ul class="tile three">
         <li>
-          <h1>Persistence and automated recovery</h1>
+          <h1 class="headline-small">Persistence and automated recovery</h1>
         </li>
         <li>
-          <p>Sirius stores and maintains local update logs and uses them to rebuild your in-memory state after an application restart.</p>
+          <p class="body-copy">Sirius stores and maintains local update logs and uses them to rebuild your in-memory state after an application restart.</p>
         </li>
       </ul>
     </li>
@@ -57,37 +61,37 @@ title: Sirius by Comcast
 
   <hr/>
 
-  <p>In short, Sirius gives you access to your reference data with
+  <p class="headline-small centered">In short, Sirius gives you access to your reference data with
   arbitrary, native data structures while handling the distributed system
   heavy lifting for you.</p>
 
 
-  <h2>Next Steps</h2>
+  <h3 class="headline-small centered">Next Steps:</h3>
 
-  <ul>
+  <ul class="centered-list">
     <li>
-      <a href="https://github.com/Comcast/sirius/wiki">Sirius Wiki</a>
+      <a class="link" href="https://github.com/Comcast/sirius/wiki">Sirius Wiki</a>
     </li>
     <li>
-      <a href="https://github.com/Comcast/sirius/wiki/Getting+started+with+Sirius">Getting started with Sirius</a>
+      <a class="link" href="https://github.com/Comcast/sirius/wiki/Getting+started+with+Sirius">Getting started with Sirius</a>
     </li>
     <li>
-      <a href="https://github.com/Comcast/sirius/wiki/Configuring+Sirius">Configuring Sirius</a>
+      <a class="link" href="https://github.com/Comcast/sirius/wiki/Configuring+Sirius">Configuring Sirius</a>
     </li>
     <li>
-      <a href="https://github.com/Comcast/sirius/wiki/How+to+deploy+Sirius">How to deploy Sirius</a>
+      <a class="link" href="https://github.com/Comcast/sirius/wiki/How+to+deploy+Sirius">How to deploy Sirius</a>
     </li>
     <li>
-      <a href="https://github.com/Comcast/sirius/blob/master/CONTRIBUTING.md">Contributing Guidelines</a>
+      <a class="link" href="https://github.com/Comcast/sirius/blob/master/CONTRIBUTING.md">Contributing Guidelines</a>
     </li>
     <li>
-      <a href="https://github.com/Comcast/sirius/blob/master/LICENSE">License</a>
+      <a class="link" href="https://github.com/Comcast/sirius/blob/master/LICENSE">License</a>
     </li>
   </ul>
 
 </section>
 
-    
 
-    
-  
+
+
+
