--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Sirius by Comcast
           <h1 class="headline-small">Simple, transparent library interface</h1>
         </li>
         <li>
-          <p class="body-copy">Arrange your data in the native data structures of your choice, and let Sirius feed the updates to your application code.</p>
+          <p class="body-copy is-light">Arrange your data in the native data structures of your choice, and let Sirius feed the updates to your application code.</p>
         </li>
       </ul>
     </li>
@@ -42,7 +42,7 @@ title: Sirius by Comcast
           <h1 class="headline-small">Eventually consistent replication</h1>
         </li>
         <li>
-          <p class="body-copy">Sirius handles replicating updates&mdash;even across wide-area networks&mdash;in a consistent order across every member of an application cluster.</p>
+          <p class="body-copy is-light">Sirius handles replicating updates&mdash;even across wide-area networks&mdash;in a consistent order across every member of an application cluster.</p>
         </li>
       </ul>
     </li>
@@ -52,7 +52,7 @@ title: Sirius by Comcast
           <h1 class="headline-small">Persistence and automated recovery</h1>
         </li>
         <li>
-          <p class="body-copy">Sirius stores and maintains local update logs and uses them to rebuild your in-memory state after an application restart.</p>
+          <p class="body-copy is-light">Sirius stores and maintains local update logs and uses them to rebuild your in-memory state after an application restart.</p>
         </li>
       </ul>
     </li>
