Moving Sirius headline from header include to content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Sirius by Comcast
 
   <section class="module">
 
+    <h1 class="headline-large white centered">Sirius</h1>
+
     <p class="body-copy white centered">Sirius is an open source distributed system library from Comcast
     that provides your application with convenient, low-latency access
     to important reference data: small, read-only datasets with
